feat: add userid to users list, insert new user, delete and alter user for admin
