# src/backend/golang-api/internal/dto/admin.go
@@ -1,0 +1,16 @@
+package dto
+
+type AlterUserRequest struct {
+	FullName string `json:"full_name" binding:"required"`
+	Email    string `json:"email"     binding:"required,email"`
+	Role     string `json:"role"      binding:"required,oneof=admin user"`
+	Status   string `json:"status"    binding:"required,oneof=active blocked"`
+}
+
+type InsertUserRequest struct {
+	FullName string `json:"full_name" binding:"required"`
+	Email    string `json:"email"     binding:"required,email"`
+	Password string `json:"password"  binding:"required,min=8"`
+	Role     string `json:"role"      binding:"required,oneof=admin user"`
+	Status   string `json:"status"    binding:"required,oneof=active blocked"`
+}
